--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
+    "chart.js": "^3.5.1",
+    "chartkick": "^4.0.5",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
